2000-06-23  Chris Toshok  <toshok@helixcode.com>

	* e-tree-model.h, e-tree-model.c: add icon_at virtual function -
	it was stupid to make the insert call take 2 pixbufs.  the model
	should give this information.
	
	* e-cell-tree.c: get rid of the opened/closed pixbuf stuff.  call
	e_tree_model_icon_of_node.

	* e-tree-example-1.c: add my_icon_at.
	
	* e-tree-simple.c (simple_icon_at): new function
	(e_tree_simple_new): add icon_at parameter.
	
	* e-tree-simple.h: add SimpleIconAtFn.

2000-06-23  Chris Toshok  <toshok@helixcode.com>

	* e-tree-example-1.c (create_tree): use the expanded/unexpanded
	pixbufs as node pixbufs for the first level of children, to test
	the drawing.

	* e-tree-model.c (e_tree_model_node_get_closed_pixbuf): new function.
	(e_tree_model_node_get_opened_pixbuf): same.
	(e_tree_model_node_insert): add opened/closed pixbuf argument.
	(e_tree_model_node_insert_before): same.

	* e-tree-model.h: add prototypes for opened/closed pixbuf
	accessors, and add them to the e_tree_model_node_insert_* calls.

	* e-cell-tree.c (ect_draw): add opened/closed pixbuf drawing per node.

2000-06-22  Christopher James Lahey  <clahey@helixcode.com>

	* e-table.c: Make the table not move around as you resize.

2000-06-22  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-item.c: Killed a warning.

2000-06-22  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-group-container.c: Remove use of the "x" and "y"
	arguments to EText.

	* e-table-item.c: Properly ref the source_model field.

	* test-check.c, test-cols.c, test-table.c: Remove use of the "x"
	and "y" arguments to ETableHeaderItem.

2000-06-21  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-field-chooser-dialog.c: Made the Close button work.

	* e-table-field-chooser.glade, e-table-field-chooser.glade.h:
	Added a text description of this dialog.

2000-06-21  Christopher James Lahey  <clahey@helixcode.com>

	* e-table-header-item.c: Changed this to move the cell to the