@@ -91,6 +91,8 @@ etog_draw (ECellView *ecell_view, GdkDrawable *drawable,
 	ECellToggleView *toggle_view = (ECellToggleView *) ecell_view;
 	GdkPixbuf *image;
 	int x, y, width, height;
+	GdkColor *background;
+
 	const int value = GPOINTER_TO_INT (
 		 e_table_model_value_at (ecell_view->e_table_model, model_col, row));
 
@@ -103,7 +105,13 @@ etog_draw (ECellView *ecell_view, GdkDrawable *drawable,
 	/*
 	 * Paint the background
 	 */
-	gdk_draw_rectangle (drawable, GTK_WIDGET (toggle_view->canvas)->style->white_gc, TRUE, x1, y1, x2 - x1, y2 - y1);
+	if (selected){
+		background = &GTK_WIDGET (toggle_view->canvas)->style->bg [GTK_STATE_SELECTED];
+	} else {
+		background = &GTK_WIDGET (toggle_view->canvas)->style->base [GTK_STATE_NORMAL];
+	}
+	gdk_gc_set_foreground (toggle_view->gc, background);
+	gdk_draw_rectangle (drawable, toggle_view->gc, TRUE, x1, y1, x2 - x1, y2 - y1);
 			    
 	image = toggle->images [value];
 
